feat: Add security rules, Cloud Functions, and admin setup
- Firestore security rules with role-based access control for all 14 collections
- Storage security rules with image type/size validation
- 16 Cloud Functions: Product CRUD, metal rates, price calculation,
  order processing, image thumbnails, admin management
- Firestore trigger to auto-recalculate all product prices on rate changes
- Storage trigger for automatic thumbnail generation
- Admin bootstrap script for initial super_admin setup
- Composite indexes for products and orders queries

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@
 
 # Firebase
 firebase-debug.log
+firebase-debug.*.log
 .firebase/
 google-services.json
 GoogleService-Info.plist
+**/serviceAccountKey.json
 
 # Dependencies
 node_modules/
