--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "@mui/x-data-grid": "^8.27.0",
     "firebase": "^12.8.0",
     "next": "^16.1.6",
     "react": "^19.2.4",
