--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -22,7 +22,6 @@
     "expo": "^54.0.33",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.13",
-    "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-linking": "~8.0.11",
@@ -48,7 +47,7 @@
     "react-native-select-dropdown": "^4.0.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0",
+    "react-native-webview": "^13.15.0",
     "rn-range-slider": "^2.2.2"
   },
   "devDependencies": {
