- Fixed Mobile-App UI issues on real device - Added top and bottom spacing - Fixed recaptcha issue - Renamed app name - Added floating back button on login screen

--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "RNExpo JewelleryEmpire",
+    "name": "DP Jewellers",
     "slug": "pn-rn-JewelleryEmpire",
     "version": "1.0.0",
     "orientation": "portrait",
