--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -4,7 +4,7 @@
     "slug": "pn-rn-JewelleryEmpire",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/apk-logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -17,7 +17,7 @@
       "package": "com.render.rnexpo_jewelleryempire",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
+        "foregroundImage": "./assets/images/apk-logo.png",
         "backgroundColor": "#ffffff"
       }
     },
