--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -17,7 +17,7 @@
       "package": "com.render.rnexpo_jewelleryempire",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/apk-logo.png",
+        "foregroundImage": "./assets/images/apk-logo-android.png",
         "backgroundColor": "#ffffff"
       }
     },
