using akash expo account for builds

--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -46,9 +46,9 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "84a0e6cb-b67a-4b92-952c-41bc22b995e7"
+        "projectId": "93795a8f-8cab-4d4a-9f83-713974d1b672"
       }
     },
-    "owner": "varun_2826"
+    "owner": "officialaakash"
   }
 }
